<resources>
    <string name="app_name">Copa Confederaciones</string>
    <string name="login">LOGIN</string>


    <string name="coup_confederations">Copa \n Confederaciones</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="status">Status</string>
    <string name="team_a">Team A</string>
    <string name="team_b">Team B</string>
    <string name="score">N</string>
    <string name="separator">:</string>

    /*Translations*/
    <string name="Finished">Finalizado</string>
    <string name="not_found" />
</resources>
