<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/ll_item_match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/ll_item_match_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="?attr/selectableItemBackground"
        android:focusable="true"
        android:clickable="true">

        <LinearLayout
            android:id="@+id/ll_match_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_match_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/date"/>

            <TextView
                android:id="@+id/tv_match_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/time"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_score_board"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/ll_team_a"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_image_team_a"
                    android:layout_width="@dimen/iv_size_team_flag"
                    android:layout_height="@dimen/iv_size_team_flag" />

                <TextView
                    android:id="@+id/tv_name_team_a"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textSize="@dimen/tv_text_team_name_size"
                    android:text="@string/team_a"/>

                <TextView
                    android:id="@+id/tv_score_team_a"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="@dimen/tv_text_team_score_size"
                    android:text="@string/score"/>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/separator"/>

            <LinearLayout
                android:id="@+id/ll_team_b"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_score_team_b"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="@dimen/tv_text_team_score_size"
                    android:text="@string/score"/>

                <TextView
                    android:id="@+id/tv_name_team_b"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textSize="@dimen/tv_text_team_name_size"
                    android:text="@string/team_b"/>

                <ImageView
                    android:id="@+id/iv_image_team_b"
                    android:layout_width="@dimen/iv_size_team_flag"
                    android:layout_height="@dimen/iv_size_team_flag" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_match_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_match_status"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/status"/>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>